# simple-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  main.go
bazel-patches/: README.md  grpc-gateway.patch
google/api/: annotations.proto  http.proto  httpbody.proto
issue-note/bazel-gazelle-788/: patch-error.md
testingutil/tools/: tools.go
timesvc/: BUILD.bazel  x.pb.go  x.pb.gw.go  x.proto  x_grpc.pb.go
